@@ -1,12 +1,16 @@
 package org.ddcn41.ticketing_system.performance.service;
 
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.ddcn41.ticketing_system.booking.entity.Booking;
 import org.ddcn41.ticketing_system.booking.repository.BookingRepository;
-import org.ddcn41.ticketing_system.performance.dto.request.PerformanceRequestDto;
-import org.ddcn41.ticketing_system.performance.dto.response.AdminPerformanceResponse;
-import org.ddcn41.ticketing_system.performance.dto.response.PerformanceResponse;
+import org.ddcn41.ticketing_system.common.dto.performance.request.PerformanceRequest;
+import org.ddcn41.ticketing_system.common.dto.performance.request.PerformanceScheduleRequest;
+import org.ddcn41.ticketing_system.common.dto.performance.response.AdminPerformanceResponse;
+import org.ddcn41.ticketing_system.common.dto.performance.response.PerformanceResponse;
+import org.ddcn41.ticketing_system.common.dto.performance.response.PerformanceSchedulesResponse;
+import org.ddcn41.ticketing_system.common.dto.performance.response.ScheduleResponse;
+import org.ddcn41.ticketing_system.common.exception.BusinessException;
+import org.ddcn41.ticketing_system.common.exception.ErrorCode;
 import org.ddcn41.ticketing_system.performance.entity.Performance;
 import org.ddcn41.ticketing_system.performance.entity.PerformanceSchedule;
 import org.ddcn41.ticketing_system.performance.repository.PerformanceRepository;
@@ -18,16 +22,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class PerformanceService {
-
     private final PerformanceRepository performanceRepository;
     private final PerformanceScheduleRepository performanceScheduleRepository;
 
@@ -37,23 +40,23 @@ public class PerformanceService {
 
     private final ScheduleSeatInitializationService initializationService;
 
-    public PerformanceResponse getPerformanceById(Long performanceId){
+    public PerformanceResponse getPerformanceById(Long performanceId) {
         return convertToPerformanceResponse(performanceRepository.findById(performanceId)
-                .orElseThrow(()-> new EntityNotFoundException("Performance not found with id: "+performanceId)));
+                .orElseThrow(() -> new BusinessException(ErrorCode.PERFORMANCE_NOT_FOUND, "performanceId: " + performanceId)));
     }
 
     public List<PerformanceResponse> getAllPerformances() {
         return performanceRepository.findAllWithVenueAndSchedules()
                 .stream()
                 .map(this::convertToPerformanceResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AdminPerformanceResponse> getAllAdminPerformances() {
         return performanceRepository.findAllWithVenueAndSchedules()
                 .stream()
                 .map(this::convertToAdminPerformanceResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PerformanceResponse> searchPerformances(String name, String venue, String status) {
@@ -65,7 +68,6 @@ public class PerformanceService {
                 performanceStatus = Performance.PerformanceStatus.valueOf(status.toUpperCase());
             } catch (IllegalArgumentException e) {
                 // 잘못된 status 값인 경우 null로 처리 (모든 상태 조회)
-                performanceStatus = null;
             }
         }
 
@@ -73,39 +75,54 @@ public class PerformanceService {
                 name != null && !name.trim().isEmpty() ? name : null,
                 venue != null && !venue.trim().isEmpty() ? venue : null,
                 performanceStatus
-        ).stream().map(this::convertToPerformanceResponse).collect(Collectors.toList());
+        ).stream().map(this::convertToPerformanceResponse).toList();
     }
 
-    public List<PerformanceSchedule> getPerformanceSchedules(Long performanceId) {
-        // TODO: 404 exception handling - 나중에 수정 예정
-        return performanceScheduleRepository.findByPerformance_PerformanceIdOrderByShowDatetimeAsc(performanceId);
+    public PerformanceSchedulesResponse getPerformanceSchedulesResponse(Long performanceId) {
+        performanceRepository.findById(performanceId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.PERFORMANCE_NOT_FOUND, "performanceId: " + performanceId));
+
+        return PerformanceSchedulesResponse.builder().schedules(performanceScheduleRepository.findByPerformance_PerformanceIdOrderByShowDatetimeAsc(performanceId).stream()
+                        .map(this::toScheduleResponse)
+                        .toList())
+                .build();
     }
 
-    public AdminPerformanceResponse createPerformance(PerformanceRequestDto createPerformanceRequestDto) {
-        Venue venue = venueRepository.findById(createPerformanceRequestDto.getVenueId())
-                .orElseThrow(() -> new EntityNotFoundException("venue not found with id: "+ createPerformanceRequestDto.getVenueId()));
+    public AdminPerformanceResponse createPerformance(PerformanceRequest createPerformanceRequest) {
+        Venue venue = venueRepository.findById(createPerformanceRequest.getVenueId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.VENUE_NOT_FOUND, "venueId: " + createPerformanceRequest.getVenueId()));
 
         Performance performance = Performance.builder()
                 .venue(venue)
-                .title(createPerformanceRequestDto.getTitle())
-                .description(createPerformanceRequestDto.getDescription())
-                .theme(createPerformanceRequestDto.getTheme())
-                .posterUrl(createPerformanceRequestDto.getPosterUrl())
-                .startDate(createPerformanceRequestDto.getStartDate())
-                .endDate(createPerformanceRequestDto.getEndDate())
-                .runningTime(createPerformanceRequestDto.getRunningTime())
-                .basePrice(createPerformanceRequestDto.getBasePrice())
-                .status(createPerformanceRequestDto.getStatus())
+                .title(createPerformanceRequest.getTitle())
+                .description(createPerformanceRequest.getDescription())
+                .theme(createPerformanceRequest.getTheme())
+                .posterUrl(createPerformanceRequest.getPosterUrl())
+                .startDate(createPerformanceRequest.getStartDate())
+                .endDate(createPerformanceRequest.getEndDate())
+                .runningTime(createPerformanceRequest.getRunningTime())
+                .basePrice(createPerformanceRequest.getBasePrice())
+                .status(Performance.PerformanceStatus.valueOf(createPerformanceRequest.getStatus()))
                 .build();
 
-        if (createPerformanceRequestDto.getSchedules() != null && !createPerformanceRequestDto.getSchedules().isEmpty()) {
+        if (createPerformanceRequest.getSchedules() != null && !createPerformanceRequest.getSchedules().isEmpty()) {
             // 각 스케줄에 performance 설정
-            for (PerformanceSchedule schedule : createPerformanceRequestDto.getSchedules()) {
-                schedule.setPerformance(performance);
+            List<PerformanceSchedule> performanceSchedules = new ArrayList<>();
 
+            for (PerformanceScheduleRequest scheduleRequest : createPerformanceRequest.getSchedules()) {
+                PerformanceSchedule schedule = PerformanceSchedule.builder()
+                        .showDatetime(LocalDateTime.parse(scheduleRequest.getShowDatetime()))
+                        .totalSeats(scheduleRequest.getTotalSeats())
+                        .status(PerformanceSchedule.ScheduleStatus.valueOf(scheduleRequest.getStatus()))
+                        .bookingStartAt(scheduleRequest.getBookingStartAt())
+                        .bookingEndAt(scheduleRequest.getBookingEndAt())
+                        .build();
+
+                schedule.setPerformance(performance);
+                performanceSchedules.add(schedule);
             }
 
-            performance.setSchedules(createPerformanceRequestDto.getSchedules());
+            performance.setSchedules(performanceSchedules);
         }
 
         Performance savedPerformance = performanceRepository.save(performance);
@@ -121,45 +138,55 @@ public class PerformanceService {
 
     public void deletePerformance(Long performanceId) {
         Performance performance = performanceRepository.findById(performanceId)
-                .orElseThrow(()-> new EntityNotFoundException("Performance not found with id: "+performanceId));
+                .orElseThrow(() -> new BusinessException(ErrorCode.PERFORMANCE_NOT_FOUND, "performanceId: " + performanceId));
 
         deleteExistingImages(performance);
 
         performanceRepository.delete(performance);
     }
 
-    public AdminPerformanceResponse updatePerformance(Long performanceId, PerformanceRequestDto updatePerformanceRequestDto) {
+    public AdminPerformanceResponse updatePerformance(Long performanceId, PerformanceRequest updatePerformanceRequest) {
         Performance performance = performanceRepository.findById(performanceId)
-                .orElseThrow(()-> new EntityNotFoundException("Performance not found with id: "+performanceId));
+                .orElseThrow(() -> new BusinessException(ErrorCode.PERFORMANCE_NOT_FOUND, "performanceId: " + performanceId));
 
-        Venue venue = venueRepository.findById(updatePerformanceRequestDto.getVenueId())
-                .orElseThrow(() -> new EntityNotFoundException("venue not found with id: "+ updatePerformanceRequestDto.getVenueId()));
+        Venue venue = venueRepository.findById(updatePerformanceRequest.getVenueId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.VENUE_NOT_FOUND, "venueId: " + updatePerformanceRequest.getVenueId()));
 
         // 기존 이미지 삭제
-        if (performance.getPosterUrl() != null && !updatePerformanceRequestDto.getPosterUrl().isEmpty() &&
-                !Objects.equals(performance.getPosterUrl(), updatePerformanceRequestDto.getPosterUrl())) {
+        if (performance.getPosterUrl() != null && !updatePerformanceRequest.getPosterUrl().isEmpty() &&
+                !Objects.equals(performance.getPosterUrl(), updatePerformanceRequest.getPosterUrl())) {
             deleteExistingImages(performance);
 
-            performance.setPosterUrl(updatePerformanceRequestDto.getPosterUrl());
+            performance.setPosterUrl(updatePerformanceRequest.getPosterUrl());
         }
 
         performance.setVenue(venue);
-        performance.setTitle(updatePerformanceRequestDto.getTitle());
-        performance.setDescription(updatePerformanceRequestDto.getDescription());
-        performance.setTheme(updatePerformanceRequestDto.getTheme());
-        performance.setStartDate(updatePerformanceRequestDto.getStartDate());
-        performance.setEndDate(updatePerformanceRequestDto.getEndDate());
-        performance.setRunningTime(updatePerformanceRequestDto.getRunningTime());
-        performance.setBasePrice(updatePerformanceRequestDto.getBasePrice());
-        performance.setStatus(updatePerformanceRequestDto.getStatus());
+        performance.setTitle(updatePerformanceRequest.getTitle());
+        performance.setDescription(updatePerformanceRequest.getDescription());
+        performance.setTheme(updatePerformanceRequest.getTheme());
+        performance.setStartDate(updatePerformanceRequest.getStartDate());
+        performance.setEndDate(updatePerformanceRequest.getEndDate());
+        performance.setRunningTime(updatePerformanceRequest.getRunningTime());
+        performance.setBasePrice(updatePerformanceRequest.getBasePrice());
+        performance.setStatus(Performance.PerformanceStatus.valueOf(updatePerformanceRequest.getStatus()));
 
 
-        if (updatePerformanceRequestDto.getSchedules() != null && !updatePerformanceRequestDto.getSchedules().isEmpty()) {
-            for (PerformanceSchedule schedule : updatePerformanceRequestDto.getSchedules()) {
+        if (updatePerformanceRequest.getSchedules() != null && !updatePerformanceRequest.getSchedules().isEmpty()) {
+            List<PerformanceSchedule> performanceSchedules = new ArrayList<>();
+            for (PerformanceScheduleRequest scheduleRequest : updatePerformanceRequest.getSchedules()) {
+                PerformanceSchedule schedule = PerformanceSchedule.builder()
+                        .showDatetime(LocalDateTime.parse(scheduleRequest.getShowDatetime()))
+                        .totalSeats(scheduleRequest.getTotalSeats())
+                        .status(PerformanceSchedule.ScheduleStatus.valueOf(scheduleRequest.getStatus()))
+                        .bookingStartAt(scheduleRequest.getBookingStartAt())
+                        .bookingEndAt(scheduleRequest.getBookingEndAt())
+                        .build();
+
                 schedule.setPerformance(performance);
+                performanceSchedules.add(schedule);
             }
 
-            performance.setSchedules(updatePerformanceRequestDto.getSchedules());
+            performance.setSchedules(performanceSchedules);
         }
 
         Performance updatedPerformance = performanceRepository.save(performance);
@@ -191,14 +218,24 @@ public class PerformanceService {
                                 getPerformance().
                                 getPerformanceId().
                                 equals(performanceId))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private ScheduleResponse toScheduleResponse(PerformanceSchedule schedule) {
+        return ScheduleResponse.builder()
+                .scheduleId(schedule.getScheduleId())
+                .showDatetime(schedule.getShowDatetime().toString())
+                .availableSeats(schedule.getAvailableSeats())
+                .totalSeats(schedule.getTotalSeats())
+                .status(schedule.getStatus().toString())
+                .build();
     }
 
     private PerformanceResponse convertToPerformanceResponse(Performance performance) {
-        List<PerformanceResponse.ScheduleResponse> scheduleResponses = performance.getSchedules() != null
+        List<ScheduleResponse> scheduleResponses = performance.getSchedules() != null
                 ? performance.getSchedules().stream()
-                .map(PerformanceResponse.ScheduleResponse::from)
-                .collect(Collectors.toList())
+                .map(this::toScheduleResponse)
+                .toList()
                 : new ArrayList<>();
 
         String posterImageUrl = s3ImageService.generateDownloadPresignedUrl(performance.getPosterUrl(), 3);
@@ -210,7 +247,7 @@ public class PerformanceService {
                 .theme(performance.getTheme())
                 .posterUrl(posterImageUrl)
                 .price(performance.getBasePrice())
-                .status(performance.getStatus())
+                .status(performance.getStatus().toString())
                 .startDate(performance.getStartDate().toString())
                 .endDate(performance.getEndDate().toString())
                 .runningTime(performance.getRunningTime())
@@ -223,7 +260,7 @@ public class PerformanceService {
 
     private AdminPerformanceResponse convertToAdminPerformanceResponse(Performance performance) {
         PerformanceResponse performanceResponse = convertToPerformanceResponse(performance);
-        List<Booking> bookings =  getBookingsByPerformanceId(performanceResponse.getPerformanceId());
+        List<Booking> bookings = getBookingsByPerformanceId(performanceResponse.getPerformanceId());
 
         int totalBookings = bookings.stream().mapToInt(Booking::getSeatCount).sum();
         BigDecimal revenue = bookings.stream().map(Booking::getTotalAmount).reduce(BigDecimal.ZERO, BigDecimal::add);
